--- a/styles.css
+++ b/styles.css
@@ -1357,6 +1357,7 @@ body {
     background-color: #000;
     color: white;
     padding: 60px 20px;
+    padding-bottom: 20px;
     position: relative;
     text-align: center;
     display: flex;
