--- a/styles.css
+++ b/styles.css
@@ -361,8 +361,8 @@ body {
     .hero-text h1 {
         font-size: 2.2rem;
         /* margin-bottom: 15px; */
-        margin-top: 90px;
-        line-height: 2.2rem;
+        margin-top: 70px;
+        line-height: 2rem;
         font-weight: bold;
     }
 
@@ -3395,12 +3395,12 @@ body {
 
 /* Form Section */
 .financial-page-form-section {
-    background-color: #ffcc00;
+    background-color: #000000;
     padding: 60px 20px;
 }
 
 .financial-page-form-overlay {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #ffcc00;
     padding: 60px;
     border-radius: 20px;
 }
