--- a/styles.css
+++ b/styles.css
@@ -4305,6 +4305,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 0px;
 }
 
 /* Fonts and Icons */
